<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.user_manager_v1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.user_manager_v1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.user_manager_v1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/blankFragmentDetail1"
        android:name="com.example.user_manager_v1.BlankFragmentDetail1"
        android:label="Détail créance"
        tools:layout="@layout/fragment_blank_detail1" />
    <fragment
        android:id="@+id/blankFragmentDeatail2"
        android:name="com.example.user_manager_v1.BlankFragmentDeatail2"
        android:label="Mes relance "
        tools:layout="@layout/fragment_blank_deatail2" />
</navigation>