<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/q"
    android:padding="25dp"
    tools:context=".EmployeeForm">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"

        android:hint="@string/form_name"
        android:text="Nom" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldLocation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"

        android:hint="@string/form_location"
        android:text="Numero" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_textFieldBranch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/form_branch"
        android:shadowColor="@color/white"
        android:text="Message"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" />

  </LinearLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/goTOHistoriqye"
        android:layout_width="108dp"
        android:layout_height="57dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/form_buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <Button

        android:id="@+id/buttonCall"
        android:layout_width="162dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@android:drawable/stat_sys_phone_call"
        android:text="appeler"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/form_buttonSave"
        android:layout_width="162dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@android:drawable/ic_media_play"
        android:text="envoyer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
  </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>