<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/e"
    android:padding="15dp"
    tools:context=".pagedacceuil">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="271dp"
        android:layout_height="172dp"
        android:contentDescription="@string/hayaya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/last7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/divider_horizontal_textfield"

        android:text="@string/accueil5"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/first_name32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="Montant des imayés" />

        <TextView
            android:id="@+id/Montant_des_im"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:textAlignment="center"
            android:textColor="@color/tropical_blue"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/last_name4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="Nombre moyen de jours en impayés" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:textAlignment="center"
            android:textColor="@color/tropical_blue"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="128" />


        <TextView
            android:id="@+id/email54"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="Montant encours" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:textAlignment="center"
            android:textColor="@color/tropical_blue"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="56 000 000" />

        <TextView
            android:id="@+id/last_name134"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="Montant échus" />

        <TextView
            android:id="@+id/last_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:textAlignment="center"
            android:textColor="@color/tropical_blue"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="12 000 000" />


        <TextView
            android:id="@+id/last_name1460"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="Compte courant" />

        <TextView
            android:id="@+id/last_name10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:textAlignment="center"
            android:textColor="@color/tropical_blue"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="0dp"
            tools:text="100 000" />

    </LinearLayout>


    <Button
        android:id="@+id/mes_creance"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="159dp"

        android:layout_height="48dp"
        android:padding="10dp"
        android:text="@string/mes_cr_ances2"
        android:textColor="@color/tropical_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_layout"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/mes_relance"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="159dp"


        android:layout_height="48dp"
        android:padding="10dp"
        android:text="@string/mes_relance2"
        android:textColor="@color/tropical_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_layout"
        app:layout_constraintVertical_bias="0.457" />


</androidx.constraintlayout.widget.ConstraintLayout>